modified some of the portfolio pictures and added icons

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 				
 				<form>
 					<label>Name</label><br/>
-					<input type="text" name="name" value="John Smith"><br/><br/>
+					<input type="text" name="name" value="John Doe"><br/><br/>
 
 					<label>Email</label><br/>
 					<input type="email" name="email" value="example@hotmail.com"><br/><br/>
@@ -51,14 +51,15 @@
 				<h3>Connect with Me</h3>
 				<div id="aside_grey_line"></div>
 				<div id="social_images">
-				<a href="https://github.com/AhmedBule" target="_blank">
-        <img src="assets/images/GitHub.png" alt="GitHub">
-        </a>
-   <a href="https://www.linkedin.com/in/ahmed-bule-55b043a1/" target="_blank">
-        <img src="assets/images/LinkedIn.png" alt="LinkedIn">
-        </a>
+				<a href="https://www.linkedin.com/in/ahmed-bule-55b043a1/" target="_blank">
+						<img src="assets/images/linkedIn-icon.jpg" alt="LinkedIn">
+						</a>
+						<a href="https://github.com/AhmedBule/" target="_blank">
+							<img src="assets/images/github-icon.jpg" alt="github">
+							</a>
+
            <a href="https://pioneerswebdesign.com/" target="_blank">
-        <img src="assets/images/overflow.png" alt="Pioneers WebDesign">
+        <img src="assets/images/pioneers-icon.jpg" alt="Pioneers WebDesign">
         </a>	
 				</div>
 			</aside>
