--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,19 @@
 				</nav>
 			</div>
 		</header>
-
+		<div id="bodyContent">
+            <section id="mainContent">
+                <h1>Portfolio</h1>
+                <div class="picSection">
+                    <div class="thumbnail center">
+                        <img src="assets/images/info-widget.jpg" alt="info-widget">
+                    </div>
+                    <div class="thumbnail right">
+                        <img src="assets/images/rock-paper.jpg" alt="rock-paper">
+                        
+                    </div>
+                </div>
+            
 			<aside>
 				<h3>Connect with Me</h3>
 				<div id="aside_grey_line"></div>
