fixed the background color and moved some pics to about me page

--- a/index.html
+++ b/index.html
@@ -44,21 +44,22 @@
     <p> My passion for Software pushed me to start my company <a href="https://pioneerswebdesign.com/"> Pioneers Web Design </a> and design websites using Wordpress for businesses. I hope that I can learn new skills and thrive in a world that is driven by technology. </p>
     </section>
 
-      <aside>
-        <h3>Connect with me!</h3>
-        <div id="aside_grey_line"></div>
-        <div id="social_images">
-           <a href="https://github.com/AhmedBule" target="_blank">
-        <img src="assets/images/GitHub.png" alt="GitHub">
-        </a>
-          <a href="https://www.linkedin.com/in/ahmed-bule-55b043a1/" target="_blank">
-        <img src="assets/images/LinkedIn.png" alt="LinkedIn">
-        </a>
-           <a href="https://pioneerswebdesign.com/" target="_blank">
-        <img src="assets/images/overflow.png" alt="Pioneers Web Design">
-        </a>
-        </div>
-      </aside>
+    <aside>
+      <h3>Connect with Me</h3>
+      <div id="aside_grey_line"></div>
+      <div id="social_images">
+      <a href="https://www.linkedin.com/in/ahmed-bule-55b043a1/" target="_blank">
+          <img src="assets/images/linkedIn-icon.jpg" alt="LinkedIn">
+          </a>
+          <a href="https://github.com/AhmedBule/" target="_blank">
+            <img src="assets/images/github-icon.jpg" alt="github">
+            </a>
+
+         <a href="https://pioneerswebdesign.com/" target="_blank">
+      <img src="assets/images/pioneers-icon.jpg" alt="Pioneers WebDesign">
+      </a>	
+      </div>
+    </aside>
     </div>
   
 
