--- a/portfolio.html
+++ b/portfolio.html
@@ -18,26 +18,31 @@
 				<div id="header_name_text_block"><h1 id="header_name_text">Ahmed Bule</h1></div>
 				<nav>
 					<div class="nav_link"><p><a href="index.html">About</a></p></div>
-					<div class="nav_vertical_bar"></div>
+					<div class="nav_horizontal_bar"></div>
 					<div class="nav_link"><p><a href="portfolio.html">Portfolio</a></p></div>
-					<div class="nav_vertical_bar"></div>
+					<div class="nav_horizontal_bar"></div>
 					<div class="nav_link"><p><a href="contact.html">Contact</a></p></div>
 				</nav>
 			</div>
 		</header>
+		
 		<div id="bodyContent">
             <section id="mainContent">
                 <h1>Portfolio</h1>
                 <div class="picSection">
-                    <div class="thumbnail center">
-                        <img src="assets/images/info-widget.jpg" alt="info-widget">
-                    </div>
-                    <div class="thumbnail right">
-                        <img src="assets/images/rock-paper.jpg" alt="rock-paper">
-                        
-                    </div>
-                </div>
-            
+        <div class="thumbnail left">
+		<img src="assets/images/info-widget.jpg" alt="info-widget" width="300" height="300">
+         </div>
+          <div class="thumbnail left">
+		<img src="assets/images/rock-paper.jpg" alt="rock-paper" width="300" height="300">
+	</div>
+		<div class="thumbnail right">
+		<img src="assets/images/rpg-game.jpg" alt="rpg-game" width="300" height="300">
+	</div>
+		<div class="thumbnail right">
+		<img src="assets/images/trivia-game.jpg" alt="trivia-game" width="300" height="300">
+	</div>
+
 		</div>
 
 		
