--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Contact me!</title>
+	<title>Contact me</title>
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,9 +20,9 @@
 				<div id="header_name_text_block"><h1 id="header_name_text">Ahmed Bule</h1></div>
 				<nav>
 					<div class="nav_link"><p><a href="index.html">About</a></p></div>
-					<div class="nav_vertical_bar"></div>
+					<div class="nav_horizontal_bar"></div>
 					<div class="nav_link"><p><a href="portfolio.html">Portfolio</a></p></div>
-					<div class="nav_vertical_bar"></div>
+					<div class="nav_horizontal_bar"></div>
 					<div class="nav_link"><p><a href="contact.html">Contact</a></p></div>
 				</nav>
 			</div>
