--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div id="header_name_text_block"><h1 id="header_name_text">Ahmed Bule</h1></div>
         <nav>
           <div class="nav_link"><p><a href="index.html">About</a></p></div>
-          <div class="nav_vertical_bar"></div>
+          <div class="nav_horizontal_bar"></div>
           <div class="nav_link"><p><a href="portfolio.html">Portfolio</a></p></div>
-          <div class="nav_vertical_bar"></div>
+          <div class="nav_horizontal_bar"></div>
           <div class="nav_link"><p><a href="contact.html">Contact</a></p></div>
         </nav>
       </div>
@@ -48,7 +48,7 @@
       <h3>Connect with Me</h3>
       <div id="aside_grey_line"></div>
       <div id="social_images">
-      <a href="https://www.linkedin.com/in/ahmed-bule-55b043a1/" target="_blank">
+      <a href="https://www.linkedin.com/in/ahmed-bule-55b043a1/" height target="_blank">
           <img src="assets/images/linkedIn-icon.jpg" alt="LinkedIn">
           </a>
           <a href="https://github.com/AhmedBule/" target="_blank">
