modified some of the tags and fized the layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
-</head>
+
 <body>
 
     <header>
@@ -19,9 +19,9 @@
         <div id="header_name_text_block"><h1 id="header_name_text">Ahmed Bule</h1></div>
         <nav>
           <div class="nav_link"><p><a href="index.html">About</a></p></div>
-          <div class="nav_horizontal_bar"></div>
+          <div class="nav_vertical_bar"></div>
           <div class="nav_link"><p><a href="portfolio.html">Portfolio</a></p></div>
-          <div class="nav_horizontal_bar"></div>
+          <div class="nav_vertical_bar"></div>
           <div class="nav_link"><p><a href="contact.html">Contact</a></p></div>
         </nav>
       </div>
@@ -48,7 +48,7 @@
       <h3>Connect with Me</h3>
       <div id="aside_grey_line"></div>
       <div id="social_images">
-      <a href="https://www.linkedin.com/in/ahmed-bule-55b043a1/" height target="_blank">
+      <a href="https://www.linkedin.com/in/ahmed-bule-55b043a1/" target="_blank">
           <img src="assets/images/linkedIn-icon.jpg" alt="LinkedIn">
           </a>
           <a href="https://github.com/AhmedBule/" target="_blank">
@@ -64,7 +64,7 @@
   
 
     <div class="push"></div>
-  </div>
+  
 
   <footer>
     <div id="footer_text"> &copy; Copyright in 2020 by Ahmed Bule </div>
