--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
 				<div id="header_name_text_block"><h1 id="header_name_text">Ahmed Bule</h1></div>
 				<nav>
 					<div class="nav_link"><p><a href="index.html">About</a></p></div>
-					<div class="nav_horizontal_bar"></div>
+					<div class="nav_vertical_bar"></div>
 					<div class="nav_link"><p><a href="portfolio.html">Portfolio</a></p></div>
-					<div class="nav_horizontal_bar"></div>
+					<div class="nav_vertical_bar"></div>
 					<div class="nav_link"><p><a href="contact.html">Contact</a></p></div>
 				</nav>
 			</div>
